@@ -44,8 +44,10 @@ public class EqualsUtilTest {
 		assertTrue(EqualsUtil.equals(null, null));
 		assertFalse(EqualsUtil.equals("", null));
 		assertFalse(EqualsUtil.equals(null, ""));
-		assertTrue(EqualsUtil.equals(new Float(Float.MAX_VALUE), new Float(Float.MAX_VALUE)));
-		assertTrue(EqualsUtil.equals(new Double(Double.MIN_VALUE), new Double(Double.MIN_VALUE)));
+		assertTrue(
+			EqualsUtil.equals(Float.valueOf(Float.MAX_VALUE), Float.valueOf(Float.MAX_VALUE)));
+		assertTrue(
+			EqualsUtil.equals(Double.valueOf(Double.MIN_VALUE), Double.valueOf(Double.MIN_VALUE)));
 		Date date = new Date(0);
 		java.sql.Date sqlDate = new java.sql.Date(0);
 		assertTrue(EqualsUtil.equals(date, sqlDate));
